--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-import": "^1.13.8",
     "cross-env": "^7.0.2",
