--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ log = "0.4"
 wgpu = "22.1.0"
 cfg-if = "1"
 futures = "0.3"
+bytemuck = { version = "1.16", features = [ "derive" ] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
