🧪 验证并行控制

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ wgpu = "22.1.0"
 cfg-if = "1"
 futures = "0.3"
 bytemuck = { version = "1.16", features = [ "derive" ] }
+num_cpus = "1.16.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
